# diff-aware-quality-workflow-py

./: .flake8  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: gatekeeper-checks.yml  pull-request-feedback.yml
src/: calculator.py
tests/: test_calculator.py
